--- a/css/estilos.css
+++ b/css/estilos.css
@@ -90,7 +90,7 @@ body{font-family: 'Open sans', sans-serif; padding-top: 50px; padding-bottom: 5p
 /*RODAPE*/
 .footer{
     height: 200px;
-    background: #fff url(../imgs/headerbg.jpg) center no-repeat;
+    background: #fff url(../imgs/fundo.jpg) center no-repeat;
     background-attachment: fixed;
     color: #fff;
 }
