--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,6 +29,7 @@ body{font-family: 'Open sans', sans-serif; padding-top: 50px; padding-bottom: 5p
     font-size: 80px;
     padding-top: 100px;
     font-weight: 600; 
+    border: solid 2px green;
 }
 .header .container h2{
     color: #fff;
