--- a/css/estilos.css
+++ b/css/estilos.css
@@ -99,6 +99,7 @@ body{font-family: 'Open sans', sans-serif; padding-top: 50px; padding-bottom: 5p
 }
 .footer .container{
     text-align: center;
+    text-shadow:#000 1px -1px 2px, #000 -1px 1px 2px, #000 1px 1px 2px, #000 -1px -1px 2px
 }
 
 .footer .container .footercontact{
@@ -171,6 +172,7 @@ body{font-family: 'Open sans', sans-serif; padding-top: 50px; padding-bottom: 5p
 /*Navbar*/
 #custom-bootstrap-menu.navbar-default .navbar-brand {
     color: rgba(119, 119, 119, 1);
+    text-shadow:#000 1px -1px 2px, #000 -1px 1px 2px, #000 1px 1px 2px, #000 -1px -1px 2px
 }
 #custom-bootstrap-menu.navbar-default {
     font-size: 14px;
