--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,7 +14,10 @@
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:400,600,800';
 body{font-family: 'Open sans', sans-serif; padding-top: 50px; padding-bottom: 5px; background: #000;}
 
+.container{
 
+    text-shadow:#000 1px -1px 2px, #000 -1px 1px 2px, #000 1px 1px 2px, #000 -1px -1px 2px;
+}
 /*HEADER*/
 .header{
     height:100vh;
@@ -99,7 +102,6 @@ body{font-family: 'Open sans', sans-serif; padding-top: 50px; padding-bottom: 5p
 }
 .footer .container{
     text-align: center;
-    text-shadow:#000 1px -1px 2px, #000 -1px 1px 2px, #000 1px 1px 2px, #000 -1px -1px 2px
 }
 
 .footer .container .footercontact{
@@ -172,7 +174,6 @@ body{font-family: 'Open sans', sans-serif; padding-top: 50px; padding-bottom: 5p
 /*Navbar*/
 #custom-bootstrap-menu.navbar-default .navbar-brand {
     color: rgba(119, 119, 119, 1);
-    text-shadow:#000 1px -1px 2px, #000 -1px 1px 2px, #000 1px 1px 2px, #000 -1px -1px 2px
 }
 #custom-bootstrap-menu.navbar-default {
     font-size: 14px;
